Wrong curve tilt after "Switch Direction" #38562

Closed
opened 2014-02-09 19:52:51 +01:00 by Karja Krähwald · 7 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: Release 2.69 and Hash: b105d2ac

Short description of error
Curves with verticenumbers of 3, 5, 7, 9, 11, 13 (and so on) twist wrong on the middle vertice after W>Switch Direction.

Tilt of curve with 5 Vertices:
(+90) ~ (+90) ~ (+90) ~ (+90) ~ (+90)

  • Switch Direction:
    (-90) ~ (-90) ~ (+90) ~ (-90) ~ (-90)

Exact steps for others to reproduce the error
Curves_wrong_Tilt.blend
Look at the curve normals.

Steps:

  1. Create a Curve (Path/Bezier/Circle doesnt matter) with 5 vertices.
  2. Select the whole spline.
  3. Rotate Tilt of all vertices to 90°.
  4. Still all selected, press "W" and "Switch Direction".

Problem:
Vertice #3 - the tilt has a different rotation than all other vertices.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: Release 2.69 and Hash: b105d2ac **Short description of error** Curves with verticenumbers of 3, 5, 7, 9, 11, 13 (and so on) twist wrong on the middle vertice after W>Switch Direction. Tilt of curve with 5 Vertices: (+90) ~ (+90) ~ (+90) ~ (+90) ~ (+90) - > Switch Direction: (-90) ~ (-90) ~ (+90) ~ (-90) ~ (-90) **Exact steps for others to reproduce the error** [Curves_wrong_Tilt.blend](https://archive.blender.org/developer/F76599/Curves_wrong_Tilt.blend) Look at the curve normals. Steps: 1. Create a Curve (Path/Bezier/Circle doesnt matter) with 5 vertices. 2. Select the whole spline. 3. Rotate Tilt of all vertices to 90°. 4. Still all selected, press "W" and "Switch Direction". Problem: Vertice #3 - the tilt has a different rotation than all other vertices.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Sergey Sharybin self-assigned this 2014-02-10 07:16:34 +01:00

Will look into the report.

Will look into the report.

This issue was referenced by blender/blender-addons-contrib@54dd355cc8

This issue was referenced by blender/blender-addons-contrib@54dd355cc866ecfe4583857c09ee9e8d2938428c

This issue was referenced by 54dd355cc8

This issue was referenced by 54dd355cc866ecfe4583857c09ee9e8d2938428c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 54dd355cc8.

Closed by commit 54dd355cc8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38562
No description provided.