Fix T38562: Wrong curve tilt after Switch Direction